# fiap-tech-challenge

./: .gitignore  Makefile  README.md  alembic.ini  deployment.md  main.py  production_model.py  pyproject.toml  routers.py  start.sh  start_all.sh  start_streamlit.sh  start_uvicorn.sh
alembic/: env.py
alembic/versions/: 358154b5a8fa_criação_inicial.py  3ead89ef50ed_criação_inicial.py  531b3ac53911_ajuste_no_schema_para_deploy.py  6ff6140e76c1_recriar_tabelas_core.py  977798fdc052_add_ano_to_all_tables.py
scripts/: start.sh  start_all.sh  stop_all.sh  streamlit.sh  streamlit_start.sh  streamlit_stop.sh  uvicorn.sh  uvicorn_start.sh  uvicorn_stop.sh
src/app/: app.py  config.py  main.py
src/app/dependencies/: auth.py
src/app/models/: models.py  schema.py
src/app/routers/: admin_router.py  comercial_router.py  embrapa.py  export_router.py  import_router.py  processing_router.py  production_router.py  routers.py
src/app/services/: db_writer.py  production_scraper.py  scraper.py
src/app/templates/: index.html
src/app/utils/: config.py  config_routers.py  database_helper.py  helpers.py  myplan.py  router_config.py  scraper_helper.py  url_helper.py
streamlit_app/: app.py
streamlit_app/pages/: 1_Produção.py  2_Processamento.py  3_Comercialização.py  4_Importação.py  5_Exportação.py  9_Administrador.py
tests/: test_commercial.py  test_commercial_historical.py  test_export.py  test_export_historical.py  test_import.py  test_import_historical.py  test_processing.py  test_processing_historical.py  test_production.py  test_production_historical.py  test_swagger_docs.py
