[project]
name = "fiap-tech-challenge"
version = "0.1.0"
description = "Desenvolvimento de uma API REST com FastAPI para coletar dados do site da Embrapa e armazená-los em banco de dados, com futura integração de modelos de machine learning."
authors = [
    {name = "Rafael Garcia",email = "rvgarci@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
