[tool.poetry]
name = "fiap-tech-challenge"
version = "0.1.0"
description = "Desenvolvimento de uma API REST com FastAPI para coletar dados do site da Embrapa e armazená-los em banco de dados, com futura integração de modelos de machine learning."
authors = ["Rafael Garcia <rvgarci@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.34"
ipykernel = "^6.29"
beautifulsoup4 = "^4.13"
pandas = "^2.2"
sqlalchemy = "^2.0"
sqlmodel = "^0.0.24"
annotated-types = "^0.7"
charset-normalizer = "^3.4"
python-dotenv = "^1.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"