[tool.poetry]
name = "fiap-tech-challenge"
version = "0.1.0"
description = "Desenvolvimento de uma API REST com FastAPI para coletar dados do site da Embrapa e armazená-los em banco de dados, com futura integração de modelos de machine learning."
authors = ["Rafael Garcia <rvgarci@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.34"
ipykernel = "^6.29"
beautifulsoup4 = "^4.13"
pandas = "^2.2"
sqlalchemy = "^2.0"
sqlmodel = "^0.0.24"
annotated-types = "^0.7"
charset-normalizer = "^3.4"
python-dotenv = "^1.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
streamlit = "^1.45.1"
plotly = "^6.1.2"
matplotlib = "^3.10.3"
protobuf = "^6.31.1"
blinker = "^1.9.0"
chardet = "^5.2.0"
# Removido dotenv e google
jinja2 = "^3.1.6"
psycopg2 = "^2.9.10"
rapidfuzz = "^3.13.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-cov = "^6.1.1"
alembic = "^1.16.1"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
